syntax="proto3";

package auth;

option go_package="github.com/hltl/GoMall/biz/proto/auth";      

service AuthService {
    rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
    rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
    rpc HealthCheck(HealthCheckReq) returns (HealthCheckResp);
}

message DeliverTokenReq {
    int32 user_id = 1;
}

message VerifyTokenReq {
    string token = 1;
}

message DeliveryResp {
    string token = 1;
}

message VerifyResp {
    bool res = 1;
}

message HealthCheckReq {}
message HealthCheckResp {
    string status = 1;
}